# saarctf-2022

./: README.md  get_flag_ids.py
backd00r/: .gitignore  Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
backd00r/checkers/: backd00r.py  connector.py  utils_crypto.py
backd00r/exploits/: exploit_key_derivation.py  exploit_leak_fd.py  exploit_steal_master_secret.py
backd00r/gamelib/: flag_ids.py  run-checkers
backd00r/service/: CMakeLists.txt
backd00r/service/cmake/: FindKernelHeaders.cmake  FindNL.cmake
backd00r/service/elfpatch/: CMakeLists.txt  patchelf.c
backd00r/service/r00t-client/: CMakeLists.txt  btcstorage.c  btcstorage.h  comms.c  debug.h  debugcomm.c  mining.c  mining.h  netlink_comms.c  netlink_comms.h  r00t-client.c  ransom_cmd.c  ransom_cmd.h  raw_socket_comms.c  raw_socket_comms.h  testcmd.c  testcmd.h
backd00r/service/r00t-kernel/: .gitignore  CMakeLists.txt  Makefile  r00t-module.c
bytewarden/: .gitignore  Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
bytewarden/checkers/: bytewarden.py  utils.py
bytewarden/exploits/: exploit_1.py  exploit_2.py  utils.py
bytewarden/gamelib/: __init__.py
bytewarden/gamelib/ci/: InstallCI.Dockerfile
bytewarden/gamelib/docs/: howto_checkers.md
bytewarden/gamelib/selenium/: selenium_wrapper.c
bytewarden/service/bytewarden/: manage.py
saarbahn/: .gitignore  Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
saarbahn/checkers/: saarbahn.py
saarbahn/exploits/: exploit_1.py  exploit_2.py
saarbahn/gamelib/: run-install  usernames.py
saarbahn/gamelib/ci/: InstallLocal.Dockerfile  service.gitlab-ci.yml
saarbahn/gamelib/docs/: howto_exploits.md
saarbahn/service/saarbahn/: .env  .gitignore  Cargo.toml  Rocket.toml  cert.pem  key.pem
saarbahn/service/saarbahn/dyn_templates/: Cargo.toml  README.md
saarbahn/service/saarbahn/dyn_templates/src/: engine.rs  lib.rs
saarbahn/service/saarbahn/migrations/2022-03-19-210221_users/: up.sql
saarbahn/service/saarbahn/src/: comment.rs  main.rs  models.rs  schema.rs  stops.rs  user.rs  utils.rs
saarbahn/service/saarbahn/templates/: error.html.hbs  generate_ticket.html.hbs  index.html.hbs  login.html.hbs  profile.html.hbs  register.html.hbs  stop.html.hbs  stops.html.hbs  verify_ticket.html
saarcloud/: Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
saarcloud/checkers/: .gitignore  demo_website_generator.py  issues.js  license-information.txt  saarcloud.py  validate_jstests.py  website_generator.py
saarcloud/checkers/working_tests/: Array-isArray.js  Array-isArray.json  JSON-parse-reviver.js  JSON-parse-reviver.json  JSON-stringify-replacer.js  JSON-stringify-replacer.json  Object-create.js  Object-create.json  Object-defineProperties.js  Object-defineProperties.json  Object-keys.js  Object-keys.json  ToNumber.js  ToNumber.json  add-recovery.js  add-recovery.json  alternative-length-miscalculation.js  alternative-length-miscalculation.json  apply-varargs.js  apply-varargs.json  arguments-bad-index.js  arguments-bad-index.json  array-constructor-host-call.js  array-constructor-host-call.json  array-every.js  array-every.json  array-holes.js  array-holes.json  array-index-immediate-types.js  array-index-immediate-types.json  array-indexing.js  array-indexing.json  array-iterate-backwards.js  array-lastIndexOf.js  array-lastIndexOf.json  array-proto-func-length-getter-except.js  array-proto-func-length-getter-except.json  array-proto-func-property-getter-except.js  array-prototype-properties.js  (+485 more)
saarcloud/exploits/: exploit_cross_context_scripting.py  exploit_logs_hpp.py  exploit_logs_hpp_formdata.py  exploit_sqlite_attach.py  exploit_sqlite_cached_authorization.py  exploit_unintended_sqli.py
saarcloud/gamelib/: README.md  gamelib-sample.py  gamelogger.py  run-clean
saarcloud/jstests/: .gitignore  collect_results.js  generate_jstests.py
saarcloud/service/: .gitignore  CMakeLists.txt  config.json  default.js  default.sql  library.d.ts  library.js  main.cc  run.sh  sqlite3_hardening.h  test.cc
saarcloud/service/controllers/: AccessLogsCtrl.cc  AccessLogsCtrl.h  LambdaCtrl.cc  LambdaCtrl.h
saarcloud/service/frontend/admincheck/: build.sh
saarcloud/service/frontend/admincheck/src/: colors.html  index.html
saarcloud/service/frontend/contentseller/: .gitignore  build.sh  package-lock.json  package.json  semantic.json
saarcloud/service/frontend/contentseller/semantic/src/: theme-amazon.config  theme-flat.config  theme-github.config  theme-material.config
saarcloud/service/frontend/contentseller/src/: index.html  semantic
saarcloud/service/frontend/issues/: build.sh  testserver.py
saarcloud/service/frontend/issues/src/: index.html  semantic
saarcloud/service/frontend/saarcloud/: craco.config.js  package-lock.json  package.json
saarcloud/service/frontend/saarcloud/public/: index.html
saarcloud/service/frontend/saarcloud/src/: App.css  App.tsx  Components.tsx  SaarRDS.tsx  SaarSites.tsx  backends.ts  fomantic-ui-license.txt  index.css  index.tsx
saarcloud/service/frontend/saarcloud/src/semantic-ui/: theme.config
saarcloud/service/jsengine/: DatabaseEngine.cpp  DatabaseEngine.h  JSExecutionEngine.cpp  JSExecutionEngine.h  LambdaRequest.h  caching.h  utils.h
saarcloud/service/plugins/: AccessLogsPlugin.cc  AccessLogsPlugin.h
saarcloud/service/static/: default
saarcloud/v8_build/: .gitignore  Dockerfile  bundle.sh  docker-compose.yml  how_to_update.txt
saarloop/: .gitignore  Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
saarloop/checkers/: gen_synth.py  loop_gen.py  saarloop.py
saarloop/exploits/: exploit_sample.py  exploit_synth.py  saarloop_api.py
saarloop/gamelib/: gamelib.py  run-build  run-exploits
saarloop/service/: manage.py  requirements.txt
saarsecVV/: Dockerfile  build.sh  dependencies.sh  docker-compose.yml  install.sh
saarsecVV/checkers/: saarsecvv.py
saarsecVV/exploits/: exploit_path_traversal.py  exploit_rop.py
saarsecVV/gamelib/: .editorconfig
saarsecVV/service/: saarsecVV  saarsecVV.c
(+100 files in other folders)
